Updated translations for German, Dutch and Canadian English

--- a/php/lang/zoph_strings.txt
+++ b/php/lang/zoph_strings.txt
@@ -125,6 +125,7 @@ Deleting %s=
 Descending=
 Description for first photo=
 Description for second photo=
+Description=
 Determine which command is used to rotate the image. This command must be available on your system. Convert is a lossy rotate function, which means it will lower the image quality of your photo. JPEGtran, on the other hand, only works on JPEG images, but is lossless.=
 Determines how to resize an image during import. Resize can be about 3 times faster than resample, but the resized image has a lower quality.=
 Directory where uploaded files are stored and from where files are imported in Zoph. This is a directory under the images directorty (above). For example, if the images directory is set to /data/images and this is set to upload, photos will be uploaded to /data/images/upload.=
@@ -161,6 +162,7 @@ Granting access to an album will also grant access to that album's ancestors if 
 Groups=
 Guess timezone=
 Hi=
+Hide in overviews=
 Hide in overviews=
 Hierarchical dated dirs=
 Highest ranked=
@@ -223,6 +225,7 @@ New Person=
 New Photo=
 New Place=
 New User=
+New circle=
 New group=
 Newest photo=
 Next=
@@ -260,9 +263,11 @@ Pages in this pageset=
 Pages=
 Pagesets=
 Paths=
+People view=
 People=
 Photo rating=
 Photos (Page %s/%s)=
+Photos of people in this circle=
 Photos taken by this person:=
 Photos to test=
 Photos will be resized to thumbnail and midsize images during import, this setting determines how many resize actions run in parallel. Can be set to any number. If you have a fast server with multiple CPU's or cores, you can increase this for faster response on the import page.=
@@ -347,6 +352,7 @@ There are no photos=
 There is %s photo=
 These options are always available in the tabs on the upper right. Use the %s home %s link to return here. Click on any thumbnail to see a larger version along with information about that photo.=
 These settings will override EXIF data!=
+This circle is hidden in overviews=
 This circle is hidden in overviews=
 This determines how Zoph displays dates. You can use the following characters: dDjlNSwzWFmMntLoYy (for explanation, see http://php.net/manual/en/function.date.php) and /, space, -, (, ), :, "," and .=
 This determines how Zoph displays times. You can use the following characters: aABgGhHisueIOPTZcrU (for explanation, see http://php.net/manual/en/function.date.php) and /, space, -, (, ), :, "," and .=
@@ -453,6 +459,7 @@ can share photos=
 can view details of people=
 can view details of places=
 can view hidden circles=
+can view hidden circles=
 cancel=
 categories=
 category description=
@@ -462,6 +469,8 @@ category=
 ccd width=
 change password=
 children=
+circle=
+circles=
 city=
 class=
 clear=
@@ -493,6 +502,7 @@ default number of columns on results page=
 default number of rows on results page=
 delete album=
 delete category=
+delete circle=
 delete color scheme=
 delete comment=
 delete group=
@@ -513,6 +523,7 @@ display camera info=
 display=
 download next file=
 download=
+edit circle=
 edit photos %s to %s of %s=
 edit photos=
 edit preferences=
@@ -544,6 +555,8 @@ group=
 groups=
 height=
 hidden=
+hidden=
+hide hidden=
 hide hidden=
 hide=
 home location=
@@ -597,6 +610,7 @@ mother=
 move down=
 move up=
 name=
+new circle=
 new=
 no children=
 no last name=
@@ -679,6 +693,7 @@ share this photo=
 show additional attributes=
 show breadcrumbs=
 show descriptions under thumbnails=
+show hidden=
 show hidden=
 show original page=
 size of pager on results page=
