--- a/php/lang/zoph_strings.txt
+++ b/php/lang/zoph_strings.txt
@@ -410,6 +410,7 @@ Yes=
 You can enable or disable the "mail this photo feature" using this option. Since Zoph needs to convert the photo into Base64 encoding for mail, it requires quite a large amount of memory if you try to send full size images and you may need to adjust memory_limit in php.ini, you should give it at least about 4 times the size of your largest image.=
 You can upload a single image or a zip or tar file of images.=
 You have enabled autocompletion for one or more dropdown boxes on this page, however, you do not seem to have Javascript support. You should either enable javascript or turn autocompletion off, or this page will not work as expected!=
+You have entered an incorrect username/password combination=
 You have requested the download of %s photos, with a total size of %s.=
 You may search for photos %s taken %s or %s modified %s in the past %s days.=
 You need to have ZIP support in PHP to download zip files=
