Added configuration option change cookie expiry time
Until now, whenever a user closes his browser, he's logged out of Zoph.
This setting makes it possible to retain sessions over browser sessions.
The default is still: log out when closing browser.

Fixes #26

--- a/php/lang/zoph_strings.txt
+++ b/php/lang/zoph_strings.txt
@@ -9,13 +9,19 @@
 (left to right, front to back).=
 0 - world=
 1 - close your eyes=
+1 day=
+1 hour=
+1 month=
+1 week=
 10 - museum=
 12 - neighborhood=
 16 - street=
 18 - house=
 2 - continent=
+4 hours=
 5 - so so=
 6 - country=
+8 hours=
 9 - city=
 A PHP extension stopped the upload. Don't ask me why.=
 A Photo from %s=
@@ -94,6 +100,7 @@ Confirm deletion of this page=
 Confirm deletion of this pageset=
 Confirm deletion of this relationship=
 Confirm deletion of this track=
+Cookie Expiry Time=
 Copy Color Scheme=
 Could not copy %s to %s.=
 Could not create directory=
@@ -316,6 +323,7 @@ See this photo in %s=
 Send feedback to %s.=
 Set CLI verbosity, can be overriden with --verbose=
 Set the language used when neither the user or the browser specifies a preference=
+Set the time after which a cookie will expire, that is, when a user will need to re-login. "session" (default) means: until user closes the browser=
 Settings that define how Zoph looks=
 Sharing photos with non-logged on users=
 Sharing=
@@ -689,6 +697,7 @@ select all=
 select=
 send as html=
 send fullsize=
+session=
 set %s for children=
 share this photo=
 show additional attributes=
