--- a/php/lang/zoph_strings.txt
+++ b/php/lang/zoph_strings.txt
@@ -459,12 +459,15 @@ camera model=
 can browse people=
 can browse places=
 can browse tracks=
+can delete photos=
 can download zipfiles=
+can edit albums, categories, places and people=
 can import=
 can leave comments=
 can rate photos=
 can rate the same photo multiple times=
 can share photos=
+can view all photos=
 can view details of people=
 can view details of places=
 can view hidden circles=
