Photos can now be deleted from disk
With the new setting "path.trash", it is possible to create a "trash
directory". Whenever a photo is removed from the database, it is moved
into that directory. If left at default, the "old" behaviour remains:
the files will be left untouched.

Also refactored the "file" object.

Issue #47

--- a/php/lang/zoph_strings.txt
+++ b/php/lang/zoph_strings.txt
@@ -761,3 +761,5 @@ yes=
 zip or zip+4=
 zip=
 zoom level=
+Trash dir=
+Directory where photos are moved when they are deleted. If left blank, files will remain where they were. This is a directory under the images directory (above). For example, if the images directory is set to /data/images and this is set to trash, photos will be moved to /data/images/trash.=
