--- a/php/lang/zoph_strings.txt
+++ b/php/lang/zoph_strings.txt
@@ -29,7 +29,6 @@ A number in pixels ("px") or percent ("%"), the latter is a percentage of the us
 A photo will be watermarked if the photo level is higher than the watermark level.=
 A possible cause is the upload_max_filesize variable in php.ini=
 A user can use the annotate photo function to e-mail a photo with a textual annotation. Can only be used in combination with the "Mail photos" feature above.=
-API key for Cloudmade Maps. Only needed if using "Cloudmade" as provider. You can use Zoph's key (which is the default), but please do not use this key for any other applications.=
 About=
 Add a page:=
 Add comment=
@@ -763,3 +762,4 @@ zip=
 zoom level=
 Trash dir=
 Directory where photos are moved when they are deleted. If left blank, files will remain where they were. This is a directory under the images directory (above). For example, if the images directory is set to /data/images and this is set to trash, photos will be moved to /data/images/trash.=
+API key to use to access MapBox. The default is Zoph's API key, please do not use it in other projects. If you are setting up a high-volume site, please consider requesting your own key=
