Issue#100 Deprecate ssl.force, url.http and url.https
Introduced the possibility to deprecate configuration items, display a
warning on the configuration page and if an item is used (that is: set
to something different then the default) a warning is displayed on the
main Zoph page.

In the next version these items will be removed. Please file a bug if
you see these warnings!

Fixes #100

--- a/php/lang/zoph_strings.txt
+++ b/php/lang/zoph_strings.txt
@@ -29,6 +29,7 @@ A number in pixels ("px") or percent ("%"), the latter is a percentage of the us
 A photo will be watermarked if the photo level is higher than the watermark level.=
 A possible cause is the upload_max_filesize variable in php.ini=
 A user can use the annotate photo function to e-mail a photo with a textual annotation. Can only be used in combination with the "Mail photos" feature above.=
+API key to use to access MapBox. The default is Zoph's API key, please do not use it in other projects. If you are setting up a high-volume site, please consider requesting your own key=
 About=
 Add a page:=
 Add comment=
@@ -135,6 +136,7 @@ Description for second photo=
 Description=
 Determine which command is used to rotate the image. This command must be available on your system. Convert is a lossy rotate function, which means it will lower the image quality of your photo. JPEGtran, on the other hand, only works on JPEG images, but is lossless.=
 Determines how to resize an image during import. Resize can be about 3 times faster than resample, but the resized image has a lower quality.=
+Directory where photos are moved when they are deleted. If left blank, files will remain where they were. This is a directory under the images directory (above). For example, if the images directory is set to /data/images and this is set to trash, photos will be moved to /data/images/trash.=
 Directory where uploaded files are stored and from where files are imported in Zoph. This is a directory under the images directorty (above). For example, if the images directory is set to /data/images and this is set to upload, photos will be uploaded to /data/images/upload.=
 Disabled=
 Do not interpolate if distance between points is more than this=
@@ -362,6 +364,7 @@ These options are always available in the tabs on the upper right. Use the %s ho
 These settings will override EXIF data!=
 This circle is hidden in overviews=
 This circle is hidden in overviews=
+This configuration item is deprecated and will be removed in the next version. If you still require it, please file a bug.=
 This determines how Zoph displays dates. You can use the following characters: dDjlNSwzWFmMntLoYy (for explanation, see http://php.net/manual/en/function.date.php) and /, space, -, (, ), :, "," and .=
 This determines how Zoph displays times. You can use the following characters: aABgGhHisueIOPTZcrU (for explanation, see http://php.net/manual/en/function.date.php) and /, space, -, (, ), :, "," and .=
 This feature is not available because the photo was not found.=
@@ -383,6 +386,7 @@ To upload and import a local file, browse to the file and specify the destinatio
 Top=
 Track=
 Tracks=
+Trash dir=
 Tree=
 URLs=
 Unbzip command=
@@ -761,6 +765,3 @@ yes=
 zip or zip+4=
 zip=
 zoom level=
-Trash dir=
-Directory where photos are moved when they are deleted. If left blank, files will remain where they were. This is a directory under the images directory (above). For example, if the images directory is set to /data/images and this is set to trash, photos will be moved to /data/images/trash.=
-API key to use to access MapBox. The default is Zoph's API key, please do not use it in other projects. If you are setting up a high-volume site, please consider requesting your own key=
